--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,14 @@
 name: Build and Deploy to Docker Hub & AWS EC2
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["Backend CI", "Frontend CI"]  # Use the exact names of your CI workflows
+    types:
+      - completed
 
 jobs:
-  build-and-deploy:
+  deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
