--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,13 +2,13 @@ name: Build and Deploy to Docker Hub & AWS EC2
 
 on:
   workflow_run:
-    workflows: ["Backend CI", "Frontend CI"]  # Use the exact names of your CI workflows
+    workflows: ["Backend CI", "Frontend CI"]
     types:
       - completed
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     runs-on: ubuntu-latest
 
     steps:
