--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -33,5 +33,5 @@ jobs:
 
       - name: Push to DockerHub
         run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
           docker push grittynazy/backend:latest 
